@@ -17,10 +17,12 @@
  - xtext: Fixed bugs in new scrolling code.
  - Use filesystem encoding for log filenames.
  - Focus the inputbox when left-clicking in xtext.
+ - Focus the inputbox when typing while the userlist is in focus.
  - Fixed bug where text typed could be sent to the wrong window after
    a detach.
  - New default icon again, this one scales better (Dagmar d'Surreal).
- - 
+ - Send /LIST args on galaxynet.
+ -  
  - 
 
 
